@@ -72,4 +72,5 @@ test64
 wchar
 transaction2
 utf8
+utf8_2
 
