@@ -1,3 +1,8 @@
+Mon Oct 06 15:43:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
+	* src/tds/iconv.c src/odbc/unittests/utf8_2.c(added):
+	- fixed string truncation with charset with shift state
+
 Thu Oct 01 10:06:13 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/replacements/basename.c src/replacements/gettimeofday.c:
 	- remove wrong comments
@@ -680,4 +685,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2616 2008-10-02 08:08:00 freddy77 Exp $
+$Id: ChangeLog,v 1.2617 2008-10-06 13:45:15 freddy77 Exp $
